# ai-ready-dental-case-packet

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.3.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  privacy_phi_risk.yml
adr/: 0001-specification-first.md
docs/: adoption-readiness-review.md  agent-integration-roadmap.md  agent-use-cases.md  architecture-review.md  dcs-role.md  external-sharing-kit.md  founding-statement.md  github-topics-setup.md  github-topics.md  manifesto.md  mcp-client-config.md  mcp-registry-submission.md  mcp-server.md  packet-spec.md  project-evolution.md  project-positioning.md  publication-plan.md  pypi-release.md  quick-agent-install.md  quickstart.md  release-checklist.md  repository-reframing.md  research-agenda.md  research-programs.md  roadmap.md  security-for-agents.md  status-report-v1.0.md  v0.1.1-release-summary.md
docs/articles/: building-the-dental-context-layer-for-ai-agents.md
examples/: mcp_agent_example.py
examples/agent_prompts/: build_packet.md  check_phi.md  mcp_workflow.md  validate_packet.md
examples/case_packets/: imaging-rich-v0.1.json  minimal-v0.1.json
examples/sample_input/: clinical_notes.txt  patient_info.json  treatment_plan.txt
examples/sample_output/: case_packet.json  case_packet.md  files_index.json  manifest.json
governance/: process.md
methods/: README.md
papers/: README.md
papers/01-clinical-cognition-is-becoming-distributed/: README.md
papers/02-reasoning-decay-revisited/: README.md  hypotheses.md
papers/03-can-clinical-cognition-be-reconstructed/: README.md  reconstruction-framework.md
registry/: mcp-listing.md  server.json
research/: journal-positioning.md
research-notes/: 001-synthetic-referral-consult-reconstruction-feasibility.md  README.md
src/dental_packet/: __init__.py  __main__.py  cli.py  deidentify.py  dicom_parser.py  file_indexer.py  report_writer.py  scan_parser.py  schemas.py  text_processor.py  validator.py
src/dental_packet_mcp/: __init__.py  __main__.py  core.py  server.py
studies/: README.md
studies/pilot-01-referral-to-consult-reconstruction/: README.md  artifact-schema.md  coding-framework.md  evaluation-rubric.md  future-paper.md  minimum-viable-dataset.md  reconstruction-protocol.md
studies/pilot-02-ai-mediated-treatment-plan-drift/: README.md
studies/pilot-03-longitudinal-clinician-cognition/: README.md
tests/: test_cli.py  test_deidentify.py  test_manifest.py  test_mcp_server.py  test_schema.py  test_spec_examples.py  test_validation_dataset.py
validation/: benchmark_summary.md  run_mcp_validation.py  validation_manifest.json  validation_report.md
validation/reports/: cv-001.md  cv-002.md  cv-003.md  cv-004.md  cv-005.md  cv-006.md  cv-007.md  cv-008.md  cv-009.md  cv-010.md  cv-011.md  cv-012.md  cv-013.md  cv-014.md  cv-015.md  cv-016.md  cv-017.md  cv-018.md  cv-019.md  cv-020.md
whitepaper/: README.md  dcs-agent-native-dentistry.md
(+249 files in other folders)
